# smartrade-adk

./: .gitignore  AGENTS.md  README.md  justfile  package-lock.json
backend/: pyproject.toml
backend/agents/adk_demo/: agent.py  config.json
backend/agents/smart_trader/: README.md  agent.py  agent_utils.py
backend/agents/smart_trader/sub_agents/analysts_team/: __init__.py  coordinator.py  market_analysts.py  stock_analysts.py
backend/agents/smart_trader/sub_agents/managers/: agent.py
backend/agents/smart_trader/sub_agents/researchers/: agent.py
backend/agents/smart_trader/sub_agents/rist_mgmt/: agent.py
backend/agents/smart_trader/sub_agents/trader/: agent.py
backend/agents/smart_trader/utils/: kline_helper.py
backend/api/: ag_ui_wrapper.py  endpoint.py
backend/api/adk_plugins/: __init__.py  message_validation.py
backend/cli/: app_factory.py  run_web_server.py  smartrade_web_server.py
backend/cli/utils/: __init__.py  pid_manager.py  process_manager.py
backend/config/: logging.py  settings.py
backend/config/docs/: README_LOGGING.md
backend/crawlers/: base.py
backend/crawlers/eastmoney/: __init__.py
backend/crawlers/jinrongjie/: __init__.py  jrj.py
backend/crawlers/taoguba/: __init__.py  tgb_jinghua.py
backend/crawlers/tonghuashun/: __init__.py  ths_hot_board.py
backend/exceptions/: base.py  error_codes.py  exception_handlers.py
backend/llm/: __init__.py  litellm_adapter.py
backend/schemas/: responses.py
backend/tests/: check_db_location.py  test_crawlers.py  test_db_latency.py  test_llm.py
backend/utils/: adk_message_utils.py
(+28 files in other folders)
